--- a/tattoo.html
+++ b/tattoo.html
@@ -359,7 +359,7 @@ that) I have sought a coherent conceptualisation for the classification
 of, and the interaction between, <em>good</em> and <em>evil</em>.
 Specifically, I wondered what it meant for somebody to be classified as
 a <em>good</em> person or an <em>evil</em> person. What criteria must
-one fulfill to receive such a label? Is there are certain number of good
+one fulfill to receive such a label? Is there a certain number of good
 deeds that one must complete before attaining the <em>good</em> person
 title? Am I myself <em>good</em> or <em>evil</em>? I could never say for
 sure, for I have a history of both good and bad actions and decisions
@@ -430,7 +430,7 @@ story. The tattoo is the story. The main objects that form the tattoo
 are the snake, the phoenix and the tree. The eye of the phoenix and the
 positioning of each element are also critical to the story.</p>
 <p>The snake emerges from hell and <strong>is</strong> <em>evil</em>.
-The original threat are ancestors feared. One must be wary of snakes in
+The original threat our ancestors feared. One must be wary of snakes in
 the grass. If you look (with eyes wide open and full attention) then
 there is a chance you will see it coming. If your gaze is averted to
 avoid an uncomfortable reality then you will surely be bitten (if not
